Adequacao da Formalizacao

--- a/Dissertacao_Marcelo_Goncalves/capitulos/formalizacao.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/formalizacao.tex
@@ -35,13 +35,13 @@ uma métrica “quadros renderizados por segundo”, no domínio da computação
 é uma métrica maximizável, pois quanto mais quadros são renderizados por unidade 
 de tempo, maior a qualidade percebida pelo usuário.
 
-\subsection{Valor de Referência ou SLA}
+\subsection{Valor de Referência de Desempenho ou SLA}
 Um valor predefinido como minimamente aceitável como resultado apresentado por 
 uma Métrica após uma Execução da Aplicação sob Teste. Este valor, também 
 referenciado neste trabalho como SLA (Service Level Agreement), serve como base 
-de comparação para que as Heurísticas desenvolvidas e apresentadas saibam se a 
-Aplicação é capaz de ser executada sobre um determinado arranjo de máquinas 
-virtuais e sob uma determinada Carga de Trabalho a ela imposta.
+de comparação para que se classifique a Aplicação como capaz de ser executada 
+em um determinado arranjo de máquinas virtuais e sob uma determinada Carga de
+Trabalho a ela imposta.
 
 \subsection{Provedor}
 Consideramos neste trabalho a figura do provedor como representando uma empresa 
@@ -99,11 +99,11 @@ Virtuais diferentes, umas mais potentes que as outras. A comparação dos result
 nesse cenário nos dão insumos para avaliar o efeito da escalabilidade vertical sobre o
 desempenho da Aplicação.
 
-As heurísticas desenvolvidas e apresentadas por este trabalho comparam 
+Os experimentos desenvolvidos e apresentados neste trabalho comparam 
 implantações de diferentes Configurações em uma determinada camada da Aplicação 
-sob Teste estudada. Isso permite que sejam feitas avaliações como a viabilidade 
-financeira da escalabilidade vertical face ao desempenho possivelmente obtido 
-com a escalabilidade horizontal.
+sob Teste estudada. Isso permite, por exemplo, que sejam feitas avaliações como 
+a viabilidade financeira da escalabilidade vertical face ao desempenho 
+possivelmente obtido com a escalabilidade horizontal.
 
 \subsection{Espaço de Implantação}
 Chamamos de Espaço de Implantação o conjunto limitado de Configurações tomadas 
