Mais rascunhos para o capitulo de implementacao

--- a/Dissertacao_Marcelo_Goncalves/capitulos/capacitor.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/capacitor.tex
@@ -17,5 +17,20 @@ Capacitor como Estratégias de Avaliação.
     \includegraphics[scale=0.5]{img/arquiteturaAltoNivel}
   \end{center}
 \end{figure}
+
+****RASCUNHO
+\subsection{Heuristicas}
+Para que uma Heurística de Avaliação de Capacidade seja compatível no âmbito deste trabalho, 
+deve apresentar um conjunto mínimo de operações esperadas para que a lógica da
+avaliação se complete e o resultado final obtido possa ser considerado válido e
+comparável com os resultados obtidos por outras Heurísticas.
+
+Além disso, as operações constituem a interface pela qual o controlador das 
+sessões de avaliação pode configurar as Heurísticas e informar-lhe os dados 
+necessários ao controle da sua execução.
+ 
+Apresentamos esse conjunto mínimo de operações nas subseções a seguir, que 
+representam o arcabouço necessário para a construção de uma Heurística de 
+Avaliação de Capacidade.
  
 % ----------------------------------------------------------
