Permitr referencia ao capitulo de formalizacao

--- a/Dissertacao_Marcelo_Goncalves/capitulos/formalizacao.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/formalizacao.tex
@@ -1,4 +1,5 @@
-\chapter[Formalização da Solução]{Formalização da Solução}
+\chapter{Formalização da Solução}
+\label{chap:formalizacao}
 % ----------------------------------------------------------
 A fim de que uma análise criteriosa possa ser feita, apresentamos a seguir um 
 conjunto de definições e terminologias que baseiam o entendimento da 
